--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hybrid-module-template",
+  "name": "@practal/parlay",
   "version": "0.0.1",
   "description": "Template for creating a hybrid ESM/CommonJS typescript module.",
   "main": "dist/cjs/index.js",
@@ -7,12 +7,14 @@
   "type": "module",
   "exports": {
     ".": {
-        "import": "./dist/esm/index.js",
-        "require": "./dist/cjs/index.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     }
   },
   "scripts": {
     "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./fixup",
+    "webby": "./node_modules/.bin/esbuild src/index.ts --bundle --outdir=web",
+    "web": "esbuild src/index.ts --bundle --outdir=web --servedir=web",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,5 +30,8 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "typescript": "^5.0.3"
-  }  
+  },
+  "dependencies": {
+    "esbuild": "0.18.15"
+  }
 }
