--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@practal/parlay",
   "version": "0.0.1",
-  "description": "Template for creating a hybrid ESM/CommonJS typescript module.",
+  "description": "Editor engine based on parsing.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "type": "module",
@@ -13,8 +13,10 @@
   },
   "scripts": {
     "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./fixup",
-    "webby": "./node_modules/.bin/esbuild src/index.ts --bundle --outdir=web",
-    "web": "esbuild src/index.ts --bundle --outdir=web --servedir=web",
+    "bundle": "./node_modules/.bin/esbuild src/index.ts --bundle --outdir=web",
+    "watch": "./node_modules/.bin/esbuild src/index.ts --bundle --outdir=web --watch",
+    "serve": "esbuild --servedir=web",
+    "web": "esbuild src/index.ts --bundle --outdir=web --servedir=web --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
