--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@practal/parsing": "file:../parsing",
-    "alogic": "file:../alogic"
+    "alogic": "file:../alogic",
+    "things": "^4.2.2"
   }
 }
