--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -16,7 +16,8 @@
         "rootDir": "src",
         "skipLibCheck": true,
         "strict": true,
-        "traceResolution": false
+        "traceResolution": false,
+        "isolatedModules": true
     },
     "compileOnSave": false,
     "exclude": ["node_modules", "dist"],
