--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./fixup",
     "bundle": "./node_modules/.bin/esbuild src/index.ts --bundle --minify --outdir=web",
     "server": "esbuild src/index.ts --bundle --outdir=web --servedir=web --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && node dist/esm/test.js"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,9 @@
   },
   "dependencies": {
     "@practal/parsing": "file:../parsing",
+    "@types/validate-npm-package-name": "^4.0.0",
     "alogic": "file:../alogic",
-    "things": "^4.2.2"
+    "things": "^4.2.2",
+    "validate-npm-package-name": "^5.0.0"
   }
 }
