--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "tsc && node dist/esm/test.js",
     "experimental": "tsc && node dist/esm/experimental_blocks.js",
     "xblocks": "tsc && node dist/esm/xblocks.js",
-    "colors": "tsc && node dist/esm/colors.js"
+    "colors": "tsc && node dist/esm/colors.js",
+    "gen": "tsc && node dist/esm/generate_colorscheme.js"
   },
   "repository": {
     "type": "git",
