--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "extends": "./tsconfig-base.json",
     "compilerOptions": {
-        "module": "esnext",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "outDir": "dist/esm",
         "target": "esnext"
     }
