--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bundle": "./node_modules/.bin/esbuild src/index.ts --bundle --minify --outdir=web",
     "server": "esbuild src/index.ts --bundle --outdir=web --servedir=web --watch",
     "test": "tsc && node dist/esm/test.js",
+    "testx": "tsc && node dist/esm/compound/testx.js",
     "experimental": "tsc && node dist/esm/experimental_blocks.js",
     "xblocks": "tsc && node dist/esm/xblocks.js",
     "rx": "tsc && node dist/esm/recursivetext/rx.js",
