--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./fixup",
     "bundle": "./node_modules/.bin/esbuild src/index.ts --bundle --minify --outdir=web",
-    "server": "esbuild src/index.ts --bundle --outdir=web --servedir=web --watch",
+    "server": "esbuild src/index.tsx --bundle --outdir=web --servedir=web --watch",
     "test": "tsc && node dist/esm/test.js",
     "testx": "tsc && node dist/esm/compound/testx.js",
     "experimental": "tsc && node dist/esm/experimental_blocks.js",
