--- a/package.json
+++ b/package.json
@@ -40,8 +40,15 @@
   },
   "dependencies": {
     "@practal/parsing": "file:../parsing",
+    "@svgdotjs/svg.js": "^3.2.0",
+    "@types/d3": "^7.4.3",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@types/validate-npm-package-name": "^4.0.0",
     "alogic": "file:../alogic",
+    "d3": "^7.8.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "things": "file:../things",
     "validate-npm-package-name": "^5.0.0"
   }
